# RSS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  settings.py
app/api/: routes.py
app/collectors/: __init__.py  android.py  base.py  kernel_org.py  lore.py  registry.py  utils.py
app/core/: scheduler.py
app/db/: __init__.py  models.py  session.py
app/mail/: __init__.py  base.py  renderers.py  smtp.py
app/models/: __init__.py  source.py
app/services/: classifier.py  collector.py  digest.py  source_loader.py
config/: rules.example.yaml  sources.example.yaml
docs/: ARCHITECTURE.md  BUILD_PLAN.md  IMPLEMENTATION_REPORT.md
tests/: test_collectors.py  test_mail_renderers.py  test_settings.py  test_source_loader.py
